VR: Move the keyboard lower when editing web input fields

Bug: 830936
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr
Change-Id: I44792a3b2d9b4bfa971c28407f0dd0c1831f5ca6
Reviewed-on: https://chromium-review.googlesource.com/1015886
Reviewed-by: Ian Vollick <vollick@chromium.org>
Commit-Queue: Yash Malik <ymalik@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551671}
Former-commit-id: 56801e49bbc478c5bc23d80a9573e495c7c0a601